# CTU

BT/makemore/: makemore1.ipynb  makemore2.ipynb  makemore_part1_bigrams.ipynb
BT/micrograd/: micrograd.ipynb
nova/user/: Makefile  hello  malloc_test  malloc_test.c  pagefault  pagefault.map
sem1/RPH/: 04_pd_tur_107_kolesole.tgz  07_reversi_107_kolesole.tgz
sem3/ALG/: CMakeLists.txt
sem3/ALG/hw01/: dfs.c  dfs.h  main.c  matrix  rectangle.c  rectangle.h  utils.c  utils.h  zero.c  zero.h
sem3/ALG/hw02/: aux_grid.c  aux_grid.h  backtracking.c  backtracking.h  hw02  main.c  placement.c  placement.h  position.c  position.h  sensor.c  sensor.h  utils.c  utils.h
sem3/ALG/hw02/datapub/: pub01.in  pub01.out  pub02.in  pub02.out  pub03.in  pub03.out  pub04.in  pub04.out  pub05.in  pub05.out  pub06.in  pub06.out  pub07.in  pub07.out  pub08.in  pub08.out  pub09.in  pub09.out  pub10.in  pub10.out
sem3/ALG/hw02/draft/: aux_grid.c  aux_grid.h  main.c  placement.c  placement.h  sensor.c  sensor.h  utils.c  utils.h
sem3/ALG/hw03/: dfs.c  dfs.h  main.c  read.c  read.h  tree.c  tree.h
sem3/ALG/hw04/: aux_matrix.c  aux_matrix.h  bfs.c  bfs.h  hw04  main.c  queue.c  queue.h  utils.c  utils.h
sem3/ALG/hw05/: bvs_tree.c  bvs_tree.h  hw05  main.c  utils.c  utils.h
sem3/ALG/hw05/datapub/: pub01.in  pub02.in  pub03.in  pub04.in  pub05.in  pub06.in  pub07.in  pub08.in  pub08.out  pub09.in  pub09.out  pub10.in  pub10.out
sem3/ALG/hw06/: hw06  main.c  oavl_tree.c  oavl_tree.h  oavl_utils.c  oavl_utils.h  rotation.c  rotation.h  utils.c  utils.h
sem3/ALG/hw06/datapub/: pub01.in  pub02.in  pub03.in  pub04.in  pub04.out  pub05.in  pub05.out  pub06.in  pub06.out  pub07.in  pub07.out  pub08.in  pub08.out  pub09.out  pub10.out
sem3/ALG/hw07/: hw07  main.c  post.c  post.h  queue.c  queue.h  sorting.c  sorting.h  utils.c  utils.h
sem3/ALG/hw08/: a.txt  attractiveness.c  attractiveness.h  converter.c  converter.h  hw08  main.c  utils.c  utils.h
sem3/ALG/hw08/uloha8_13_kolesole/: attractiveness.c  attractiveness.h  converter.c  converter.h  main.c  utils.h
sem3/ALG/zk/: backtracking.c  backtracking.h  tree_utils.h  zk
sem3/ALG/zk/first_try/: aux_grid.c  aux_grid.h  main.c  placement.c  placement.h  utils.c  utils.h  zk
sem3/ALG/zk/inf/: help.c
sem3/ALG/zk/second_try/: bfs.c  bfs.h  grid.c  grid.h  main.c  queue.c  queue.h  utils.c  utils.h  zk
sem3/ALG/zk/second_try/datapub/: pub01.in  pub02.in  pub03.in  pub04.in  pub05.in  pub05.out  pub06.in  pub07.in  pub08.in  pub08.out  pub09.in  pub09.out  pub10.in  pub10.out
sem3/ALG/zk/third_try/: backtracking.c  main.c  sorting.c  sorting.h  tree_utils.c  utils.c  utils.h
sem3/NUM/: kolesole_NUM109.mw  (+6 more)
sem3/OSY/: CMakeLists.txt
sem3/OSY/asm/: ltrace_output.txt  main.c  strace_output.txt  try_asm
sem3/OSY/cv4/: cv4.c
sem3/OSY/hw01/: my_script.sh
sem3/OSY/hw02/: my_script.sh
sem3/OSY/hw03/: Makefile  forkpipe  help_sigterm.c  help_sigterm.h  main.c  nsd  osy04.tgz
sem3/OSY/hw04/: Makefile  consumer.c  consumer.h  linked_list.c  linked_list.h  main.c  osy05.tgz  prod-cons  producer.c  producer.h
sem3/OSY/hw05/: Makefile  factory  hw05  input.txt  main.c  utils.c  utils.h  work.c  work.h  worker.c  worker.h  workers_list.c  workers_list.h
sem3/OSY/hw07/: hexconv  hexconv.c
sem3/OSY/hw08/: index.html  my_script.sh
sem3/OSY/nova/: Makefile
sem3/OSY/nova/kern/: Doxyfile
sem3/OSY/nova/kern/include/: ec.h  kalloc.h
sem3/OSY/nova/user/: hello.c  hello.map  malloc_test.linux  malloc_test.map  mem_alloc.c
sem4/PDV/hw01/: CMakeLists.txt
sem4/PDV/hw01/src/: ThreadPool.h  main.cpp
sem4/PDV/sem01/: CMakeLists.txt
sem4/PDV/sem01/src/: bfs.cpp  iddfs.cpp  iddfs_weighted.cpp  main.cpp  state.h
sem4/PDV/sem01/src/domains/: hanoi.h  maze.h  sat.h  sliding_puzzle.h
sem4/PDV/week01/cv1/: CMakeLists.txt
sem4/PDV/week01/cv1/cmake-build/: 01_0hello  01_1memory  01_2matrix  01_3false_sharing  01_4magic  01_5ema  CMakeCache.txt  Makefile  cmake_install.cmake
sem4/PDV/week01/cv1/pdv_lib/: random.hpp
sem4/PDV/week01/cv1/src/: 2matrix.cpp  5ema.cpp
sem4/PDV/week02/lab02/: CMakeLists.txt
sem4/PDV/week02/lab02/pdv_lib/benchmark/: core.hpp
sem4/PDV/week02/lab02/src/: 1threads.cpp  1threads_benchmark.cpp  2condition_variable.cpp
sem4/PDV/week02/lec02/examples/: CMakeLists.txt
sem4/PDV/week02/lec02/examples/src/1cpp_intro/: main.cpp  template_array.cpp  template_fn.cpp  template_heap.cpp
sem4/PDV/week02/lec02/examples/src/2threads/: 1jthread.cpp  2synchronization.cpp
sem4/PDV/week02/lec02/examples/src/3atomics/: 1increment.cpp  1increment_atomic.cpp  2spinlock.cpp  2spinlock_atomic.cpp
sem4/PDV/week03/lab03/: CMakeLists.txt
sem4/PDV/week03/lab03/src/: 1openmp_test.cpp  2integrate.cpp  2integrate_benchmark.cpp
sem4/PDV/week03/lec03/: CMakeLists.txt
sem4/PDV/week03/lec03/src/: 1hello_world.cpp  2parallel.cpp  2parallel_omph.cpp  3sections.cpp  4for.cpp  5for_benchmark.cpp  6for_gantt.cpp  6render_gantt.py  7for_collapse.cpp  8sync.cpp  9cancellation.cpp  9tasks.cpp
sem4/PDV/week04/lab04/: CMakeLists.txt
sem4/PDV/week04/lab04/src/: 1ConcurrentLinkedList.h  2LockFreeLinkedList.h  SequentialLinkedList.h  SpinMutex.h  main.cpp
sem4/PDV/week04/lec04/: CMakeLists.txt
sem4/PDV/week04/lec04/pdv_lib/benchmark/: core.hpp
sem4/PDV/week04/lec04/src/: 1rwlock.cpp  2concurrent_hash_set.cpp  3atomic_for_index.cpp  4instrumentation_counter.cpp  5average_atomic.cpp  6max_atomic.cpp  7spinlock.cpp  8lock_free_stack.cpp
sem4/PDV/week05/lab05/: CMakeLists.txt
sem4/PDV/week05/lab05/src/: 1early_exit.cpp  2cancellations.cpp  3tasks.cpp
sem4/PDV/week05/lec05/: CMakeLists.txt
sem4/PDV/week05/lec05/pdv_lib/: benchmark.hpp
sem4/PDV/week05/lec05/src/: 1nested_parallel.cpp  2cancellation_for.cpp  3quicksort.cpp  4prime_sieve.cpp
sem4/PDV/week06/lab06/: CMakeLists.txt
sem4/PDV/week06/lab06/src/: 1mergesort.h  2countingsort.h  3prefixsum.h  prefixsum.cpp  sorting.cpp
sem4/PDV/week06/lec06/: CMakeLists.txt
sem4/PDV/week06/lec06/src/: 1quicksort.cpp  2odd_even_sort.cpp  3stl_tour.cpp  4stl_sort_rewritten.cpp
(+415 files in other folders)
